# challenges

./: README.md
mine/: Cargo.toml  README.md
mine/src/: main.rs
prjctr/: README.md
prjctr/analytics/: Cargo.toml  response.json
prjctr/analytics/src/: main.rs
prjctr/entry-challenge/: cost-estimate.md
prjctr/monitoring/: docker-compose.yml  generate-load.sh  loadgen.yaml
prjctr/monitoring/app/: Cargo.toml  Dockerfile
prjctr/monitoring/app/src/: main.rs
prjctr/monitoring/config/nginx/conf.d/: default.conf
prjctr/monitoring/config/prometheus/: prometheus.yml
prjctr/monitoring/config/telegraf/: telegraf.conf
rproxy/: Cargo.toml  README.md  config.json
rproxy/src/: config.rs  main.rs  proxy.rs
