[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive", "env"] }
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["net", "macros", "rt-multi-thread", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"