[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.7"
clap = { version = "4.1.6", features = ["derive", "env"] }
elasticsearch = { version = "8.5.0-alpha.1", features = ["rustls-tls"], default-features = false }
futures = "0.3.26"
mongodb = "2.3.1"
prometheus_exporter = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
